--- a/main.tex
+++ b/main.tex
@@ -218,7 +218,7 @@ $$
 
 Den långsiktiga realräntan = subjektiva diskonteringsräntan.
 \par
-En sluten ekonomi med konstant befolkning och teknisk nivå. $ \rightarrow $ varken produktion eller konsumtion kan växa på lång sikt. \par
+En sluten ekonomi med konstant befolkning och teknisk nivå. $ \Rightarrow $ varken produktion eller konsumtion kan växa på lång sikt. \par
 
 I en långsiktig jämvikt har vi ingen tillväxt. 
 
@@ -245,6 +245,54 @@ Så här kan det se ut över tid om kaptialstocken eller liknande minskar krafti
 \vspace{5mm}
 \title{Föreläsning 8}
 \vspace{5mm} \par \noindent 
+
+Vi kan se tydliga skillnader mellan Nord- och Sydkorea, de ena är öppet och fritt medan de andra stängt och planekonomi. Syd är 20ggr rikare idag än Nord. Detta är direkt beroende på vilken typ av ekonomi. 
+
+\begin{itemize}
+    \item Privat kapital: maskiner, byggnader
+    \item Offentligt kapital: infrastruktur
+\end{itemize}
+
+\textbf{Inkomstskillnader: } Dessa kan försklaras av, fysiskt kapital ca $ 20 $, humankapital mellan $ 10  \ till \ 30  $  resterande måste bero på något annat, E ,[procent].
+Då teknologin i fattiga länder många gånger är väldigt låg så är deras BNP också lägre. De kan helt enkelt inte mäta sig med omvärlden på grund utav deras dåliga tillgång till teknik. 
+
+\vspace{5mm}
+\title{Föreläsning 9}
+\vspace{5mm} \par \noindent 
+
+\textbf{Arbetslöshet:} \par \noindent Frågan är här; Varför söker inte unga jobb? Är de för få platser? Är det för fås som slutar? Kompetenser varierar mellan personer, så gör också viljan att ha ett jobb.  \par \noindent  OLF: de är dem som står utanför arbetskraften, sjuka, studerande, och/eller pensionärer.  \par \noindent Frågan är; Hur stor är chansen att få jobb om du söker?  \par \noindent 
+Andelen som söker jobb delat med den andel jobb som öppnas upp. 
+$$
+f \approx \frac{s}{\lambda u+s}
+$$
+Där \textbf{s} är den andel som som slutar varje månad.  \par \noindent 
+
+\begin{itemize}
+    \item $ \lambda$: Färre sökande per plats om de sökande är mindre aktiva.
+    \item s: 3-4 ggr vanligare att byta jobb i Tyskland och USA.
+    \item u: Fler som söker $ \Rightarrow $ svårare att får jobb. 
+\end{itemize}
+
+Chansen att få jobb är större då fler lämnar och/eller när låg arbetslöshet gäller. Arbetslöshet är ett problem för både samhälle och individen. Ekonomiska kostnader och psyko-social konsekvenser. Det är framförallt den långsiktiga arbetslösheten som är svår, denna kan leda till utanförskap, tappad kompetens, och lägre inkomst. Sverige finns många starka unioner (fackföreningar) dessa medför en högre arbetslöshet. Dessa har inte lika stor påverkan i andra länder så som USA. 
+
+\begin{itemize}
+    \item $\lambda f $ är andelen arbetslösa som får jobb under månaden.
+    \item v är andelen arbetslösa som lämnar arbetskraften. 
+\end{itemize}
+
+x är andelen som lämnar arbetslösheten varje månad. Denna blir mindre varje månad. Till slut så resutlerar den i en geometrisk serie som ger den andra ekvationen.  
+
+$$
+ x = \lambda f + v 
+$$
+$$
+\frac{1}{\lambda f + v}
+$$
+
+\vspace{5mm}
+\title{Föreläsning 10}
+\vspace{5mm} \par \noindent 
+
 
 
 
