--- a/main.tex
+++ b/main.tex
@@ -124,10 +124,10 @@ L = arbetskraft.
  \vspace{5mm}
  
 \par \noindent
-Köpkraft = $\frac{W}{P}$, nominell lön delat med prisnivån.
-Inverterad efterfrågefunktion: $P_i = P(Y_i,P,Y)$ \par \noindent
+Köpkraft = $\frac{W}{P}$, nominell lön delat med prisnivån.\par \noindent
+Inverterad efterfrågefunktion: $P_i = P(Y_i,P,Y)$ \vspace{5mm} \par \noindent
 
-Priselasticitet: $\frac{P_i*dY_i}{dP_i*Y_i}$
+Priselasticitet: $$\frac{P_i*dY_i}{dP_i*Y_i}$$
 
 Det genomsnittliga priset: 
 $$
@@ -293,7 +293,15 @@ $$
 \title{Föreläsning 10}
 \vspace{5mm} \par \noindent 
 
+\textbf{Teorier om arbetslöshet:}
+\vspace{5mm} \par \noindent Effektivitets-löneteorin handlar om hur företag sätter löner för att minimera kostnaden för ett givet antal anställda. Om det är låg arbetslöshet så har företagen incitament att höja löner. Detta då det finns få som söker jobben. Vice versa gäller vid hög arbetslöshet, då omvänt. 
 
+\includegraphics[scale=0.6]{skarm4}
+
+Den önskade lönen blir där med: 
+$$
+W^d = (1+a+bu)W
+$$
 
 
 
