--- a/main.tex
+++ b/main.tex
@@ -296,14 +296,56 @@ $$
 \textbf{Teorier om arbetslöshet:}
 \vspace{5mm} \par \noindent Effektivitets-löneteorin handlar om hur företag sätter löner för att minimera kostnaden för ett givet antal anställda. Om det är låg arbetslöshet så har företagen incitament att höja löner. Detta då det finns få som söker jobben. Vice versa gäller vid hög arbetslöshet, då omvänt. 
 
-\includegraphics[scale=0.6]{skarm4}
+\includegraphics[scale=0.5]{skarm4}
 
 Den önskade lönen blir där med: 
 $$
 W^d = (1+a+bu)W
 $$
+Vad skull ske på lång sikt om $ u < u^n$? \par \noindent 
+Detta skulle medföra att $ N > N^n $. Det blir svårt att behålla och rekrytera personal. Se vad som händer på grafen. 
 
+\includegraphics[scale = 0.5]{skarm5} \par
 
+\textbf{Sökfriktioner} handlar om att arbetare har olika kvalitéer och preferenser. Det tar också tid att hitta rätt person till rätt jobb. De faktorer som påverkar graden av friktion och arbetslösheten är: \textbf{Intensiteten}, hur mycket och ofta de arbetslösa söker jobb. \textbf{Kräsenhet}, hur kräsna de är med vilket jobb de får, \textbf{Konkurrens}, hur väl de kan konkurera med andra på marknaden. Skulle inte sökfriktioner existera så skulle detta medföra att kurvan för $ u^n $ låg på en lägre nivå. Då sökfriktionerna medför att vissa inte får jobb, eller inte lika lätt i alla fall. Det vill säga sökfriktioner ökar på den naturliga arbetslösheten. Det finns visa vktiga faktorer för att påverka sökfriktioner. Dessa är sådan som: regler för arbetslöshetsersättning, utbildningssystmets förmåga att utrusta arbetskraft med färdigheter, och arbetsmarknadspolitikens utformning (arbetsförmedling osv). \par \noindent \vspace{5mm} \textbf{Appendix:} \par \noindent 
+I Sverige existerar inte några minimelöner. Dock existerar det lägsta löner i de flesta kollektivavtal. Minimelöner kan medföra arbetslöshet speciellt för lågkvalificerade grupper. Den teknologiska utvecklingen kan vara en förklarande faktor till detta. Detta ger samma effekt som sökfriktioner. Större andel ställs utanför arbetsstyrkan. Länder med en generös arbetslöshetsersättning har högre arbetslöshet, detta kan bero på att de arbetslösa finner sig i att vara det. Därmed blir lata/bekväma. 
+
+\vspace{5mm}
+\title{Föreläsning 11}
+\vspace{5mm} \par \noindent 
+
+\textbf{Inflation och teori} \par \noindent \vspace{5mm}
+
+Vad bestämmer efterfrågan på pengar? 
+$$
+M*V = P*Y 
+$$
+V: Velocity, hur ofta du får betalt, i princip. 
+$$
+M^d = \frac{1}{V} PY
+$$
+På lång sikt så kan vi se att prisnivån blir den övre formeln fast med substituerat $ i$. Inflationen om $r^n, \pi, V$ är konstant. Ger oss med hjälp av förenkling gjord i förelsäning 1 följande formel. 
+
+$$ 
+Y = Y^n: \ \pi = \frac{\Delta P }{P} = \frac{\Delta M}{M} - \frac{\Delta Y^n}{Y^n}
+$$
+
+Slutsatsen blir att om tillgången på pengar växer snabbare än jämviktsproduktionen så resulterar detta i inflation. Om landet försöker att finansiera offentliga utgifter till stor del med hjälp av att trycka mer pengar, det vill säga öka den monetära basen, så kommer det att resultera i en hyperinflation. Detta var vad som skede med Zimbabwe och Tyskland.  \par \noindent \vspace{5mm} 
+
+\vspace{5mm}
+\title{Föreläsning 12}
+\vspace{5mm} \par \noindent 
+
+\textbf{IS-LM}
+\vspace{5mm} \par \noindent 
+
+IS-LM modellen har med Y som består av konsumtion och investeringar, samt realränta: $ r = i-\pi^e$. LM delen är funktionen för hur efterfrågan för pengar ser ut. IS ekvationen får vi från den avreagerade efterfrågan och den totala inkomsten. Den kan ses i nedanstående graf. Den långsiktiga inkomsten är helt vertikal, det vill säga beror inte alls i längden på efterfrågan. 
+
+\includegraphics[scale=0.5]{skarm6} \vspace{5mm} \par \noindent 
+
+\textbf{Multipliceringseffekten:} Den säger att vid en viss ändring $ \Delta I$ i aggregerad efterfrågan så sker en större ändring i $ Y$. En ökning i ränta medför en sänkning av konsumtion och investeringar. Detta kan ses i nedanstående bild. 
+
+\includegraphics[scale=0.5]{skarm7}
 
 
 \bibliographystyle{plain}
