--- a/main.tex
+++ b/main.tex
@@ -332,6 +332,7 @@ $$
 
 Slutsatsen blir att om tillgången på pengar växer snabbare än jämviktsproduktionen så resulterar detta i inflation. Om landet försöker att finansiera offentliga utgifter till stor del med hjälp av att trycka mer pengar, det vill säga öka den monetära basen, så kommer det att resultera i en hyperinflation. Detta var vad som skede med Zimbabwe och Tyskland.  \par \noindent \vspace{5mm} 
 
+\section{Korta sikten}
 \vspace{5mm}
 \title{Föreläsning 12}
 \vspace{5mm} \par \noindent 
@@ -345,7 +346,110 @@ IS-LM modellen har med Y som består av konsumtion och investeringar, samt realr
 
 \textbf{Multipliceringseffekten:} Den säger att vid en viss ändring $ \Delta I$ i aggregerad efterfrågan så sker en större ändring i $ Y$. En ökning i ränta medför en sänkning av konsumtion och investeringar. Detta kan ses i nedanstående bild. 
 
-\includegraphics[scale=0.5]{skarm7}
+\includegraphics[scale=0.5]{skarm7} \vspace{5mm} \par \noindent 
+Med hjälp av dessa får vi sedan den slutgiltiga IS-kurvan. Om den nominella räntan är lika med den naturliga realräntan och förväntad inflation så är också produktionen på den naturliga nivån. Ökar den nominella räntan så sjunker produktionen. \vspace{5mm} \par \noindent  Om det är så att utbudet på pengar ökar så minskar räntan. Detta går hand i hand med vår intuition. Det vill säga om det finns mer pengar på marknade, utbudet ökar, så sjunker efterfrågan på pengar och där med också hur mycket folk är villiga att betala för pengar. $\frac{M}{P}$ skiftar till höger. Om det istället är så att produktionen ökar så skiftar hela kurvan utåt. Detta för att ökar $\frac{Y}{V_i}$ så måste $\frac{M}{P}$ följa med (likhetstecken). IS-kurvan står för marknaden för varor och tjänster. LM-kurvan står för penningmarknaden. IS-LM modellen är en kortsiktig modell. Kom ihåg att alla modeller är fortfarande i slutna ekonomier. \vspace{5mm} \par \noindent Om personer blir mer optimistiska eller pessimistiska om framtiden så är det $ Y^e$ som ändrar sig och därför är det IS kurvan som skiftar utåt. Det är väldigt viktigt att identifiera och förklara vilken variabel som påverkas. 
+
+\vspace{5mm}
+\title{Föreläsning 14}
+\vspace{5mm} \par \noindent 
+
+\textbf{Inflation och arbetslöshet}
+\vspace{5mm} \par \noindent 
+Vad säger teorin om sambandet mellan arbetslöshet och inflation? Vi kan inte varaktigt ha en rabtslöshet som ligger under en viss jämviktsnivå utan att inflationen tar fart. Philipskurvan ger oss ett verktyg för att knyta ihop den långa och korta sikten. Vi har tre visioner av Philipskurvan. 
+\begin{enumerate}
+ \item Arbetslöshet och löneökning
+ \item Arbetslöshet och prisinflation
+ \item BNP-gap och prisinflation
+\end{enumerate}
+
+$$
+   PC1:\ \frac{\Delta W_t}{W_{t-1}} = \frac{\Delta W^e_t}{W_{t-1}} - \hat{b}(u_t - u^n) 
+$$
+Där: $ \hat{b} = \frac{\lambda b}{1-\lambda}$
+Den kurvan kan se ut på följande vis.
+
+\includegraphics[scale=0.5]{skarm8}
+
+$$
+PC2: \ \pi = \pi^e - \hat{b}(u_t-u^n) + z
+$$
+Där Z = kostnadsstörningar. Den får representera alla typer av störningar på utbudsidan. Energipriser och skatter är exempel på sådana störningar. Högre kostnader ger högre $ \pi$.  \vspace{5mm} \par \noindent 
+
+BNP gapet definieras i from av förändringen från det natruliga tillståndet. 
+$$
+\hat{Y} = \frac{Y-Y^n}{Y^n}
+$$
+Är detta positivt så ligger produktionen över jämviktsnivån och där med så ligger arbetslösheten under den naturliga nivån. Detta medför att löner ökar snabbare än väntat och att priser också stiger mer än väntat. Denna är den mest intressanta. Inflationen beror på BNP-gapet och kostnadschocker. Förväntningarna kommer från vad folket tror om framtiden. Det vill säga har det varit lågkonjuktur en längre tid så tror också folket att det kommer vara det nästa år. De blir försiktigare. 
+
+$$
+PC3: \ \pi = \pi^e + \beta \hat{Y} + z
+$$
+Kurvan kommer se ut som följande. 
+
+\includegraphics[scale=0.6]{skarm10} 
+\vspace{5mm} \par \noindent 
+
+Vi kan i princip har flera olika typer av förväntnigar av folket några av de vanliga är: 
+\begin{enumerate}
+ \item Backåtblickande: $ \pi^e_t = \pi_{t-1}$, dagens inflation är samma som igår 
+ \item Trovärdigt inflationsmål: $ \pi^e_t = \pi^{\otimes}$
+ \item Rationella förväntningar: $ \pi^e_t = \pi_t$ 
+ \end{enumerate}
+
+Vid en expansiv penningpolitik så rör vi oss endast längs med kurvan. Det flyttar inte på kurvan. Detta är period 1. Efter det så kommer folk att justera sina förväntningar och där med skifta kurvan uppåt. Om den landet fortsätter att föra en sådan politik så kommer händelsen att upprepa sig. Det vill säga inflationen fortsätter att stiga. Dock på väldigt lång sikt så går det inte att lura folk. Där med är den långsiktiga Philipskurvan helt vertikal. Det existerar ingen avvägning mellan aktivitet i ekonomin och inflation, det vill säga prisförändring. För att gå tillbaka till det ursprungliga läget så måste en restriktiv politik föras. \vspace{5mm} \par \noindent 
+
+Vid ett trovärdigt inflationsmål så är den kortsiktiga och långsiktiga kurvan desamma. Vi rör oss med kurvan om det existerar en expansiv ekonomisk politik. \vspace{5mm} \par \noindent 
+
+\textbf{Appendix:}\vspace{5mm} \par \noindent 
+Idag verkar det som att många i Sverige har tilltro till inflationsmållet snarare än tillbakablickande syn. I Sverige så har arbetslösheten legat mellan $ 5-10 \%$ sedan 90-talet. Inflationen har också legat runt $ 2\%$. Som är målet.När inflationen väl är hög så tenderar den att fortsätta vara det då den förväntade inflationen är högre. 
+
+\section{Ekonomisk politik}
+\vspace{5mm}
+\title{Föreläsning 15}
+\vspace{5mm} \par \noindent 
+
+\textbf{Penningpolitik på kort sikt}
+\vspace{5mm} \par \noindent 
+Vi knyter samman IS-LM och PC. För att se vad som händer på kortsikt vid olika scenarion. Penningpolitikens mål är att ha prisstabilitet i ekonomin. De har också andra mål som att hålla produktionen på en jämn nivå. Över lag stödja ekonomin. På kort sikt så existerar det en avvägning mellan låg inflation och arbetslöshet. Lång sikt finns ingen avvägning. 
+
+\begin{itemize}
+    \item Ökad optimism/pessimism = efterfrågestörning
+    \item Råvaruprisfall = kostnadsstörning
+    \item Fall i inflationsförväntningarna 
+    \item Produktivitetsstörning
+\end{itemize}
+
+Så här startar vi i vår modell: 
+
+\includegraphics[scale=0.5]{skarm11} 
+
+\vspace{5mm} \par \noindent 
+
+Vi en negativ efterfrågestörning så flyttar IS inåt. Om inte banken agerar så kommer inflationen att sjunka längs PC. \vspace{5mm} \par \noindent Om det sker en kostnadsstörning så påverkar den PC i en period sedan så skiftar PC tillbaka till ursprungligt läge. Här kan banken reagera på två sätt, låta inflationen stiga för att $ Y^n = Y $ eller fösöka hålla nere inflationen via en stor ökning i räntan. Det vill säga $ i_1 = r' + \pi^{\otimes} $. 
+
+\vspace{5mm} \par \noindent 
+
+Vid en minskad inflationsförväntning så sjunker $ \pi^e < \pi^{\otimes} $. Detta påverkar först ränta som kommer att öka, detta skiftar IS inåt. För utom IS så skiftar också PC ner för att $ \pi^e$ är lägre än målet. Om inte banken agerar så kommer inflationen vara lägre och lika så BNP. Vid detta läget så måste räntan sänkas kraftigt för att nå tillbaka till $ \pi^{\otimes}$. 
+
+\vspace{5mm} \par \noindent 
+
+Det finns flera försvårade faktorer som riksbanken måste handskas med. 
+\begin{itemize}
+     \item Viss data blir först tillgänglig inom 0,5-1 år. 
+     \item Penningpolitiken påverkar produktion och inflation med tidsfördröjning, 1-2 år. 
+\end{itemize}
+
+\textbf{Appendix: } \vspace{5mm} \par \noindent Är det så att arbetskraften blir mindre produktiv så är det ett skifte i E, detta av negativ from. Företagens kostnader ökar, det medför högre inflation. PC skiftar uppåt. Om banken i detta läge bryr sig mycket om inflationsmålet så kommer de att höja räntan. Detta medför att högkonjukturen fördjupas ytterligare. 
+\vspace{5mm} \par \noindent 
+\title{Föreläsning 16}
+\vspace{5mm} \par \noindent 
+
+\textbf{Finnanspolitik}
+
+\vspace{5mm} \par \noindent 
+
+
+
 
 
 \bibliographystyle{plain}
