--- a/main.tex
+++ b/main.tex
@@ -449,6 +449,206 @@ Det finns flera försvårade faktorer som riksbanken måste handskas med.
 \vspace{5mm} \par \noindent 
 
 
+Stora delar av Sveriges skatter kommer från direkta skatter på arbete och indirekta skatter på arbete. Mervärdesskatt är också en stor del av skatterna. De ofentliga utgifterna är uppdelade i många områden, några av de stora är Socialtskydd, Utbildning, Hälsa/Sjukvård och Infrastruktur. 
+
+Den ofentliga sektorns budget resptrektion ser ut på följande vis: 
+$$
+\Delta D_{t-1} = G_t -T_t + rD_t 
+$$
+
+Förändringen i skuld = Statens konsumtion och investeringar - Skatter och transfereringar + Ränta på nuvarande skuld
+
+$$
+G-T = Primära \ budgetunderskottet 
+$$
+Ovanstående kan tolkas, hur mycket som spenderas - hur mycket inkomst som staten får. Detta betyder lever landet ovanför sina tillgångar eller spenderar de mindre än sina tillgångar. 
+
+\vspace{5mm} \par \noindent 
+
+Sverige har en relativt låg bruttoskuld jämfört med andra länder. Denna ligger på ungefär 40 \% av BNP:n. Tyskland som är ett starkt land har en skuld som ligger på hela 80 \%. Grekerna som har haft det svårt under en längre tid ligger på ca 170 \% av BNP. 
+
+$$
+d_t = \frac{D_t}{Y_t}
+$$
+Formeln ovan ger oss hur stor skulden är jämfört mot landets BNP. 
+\vspace{5mm} \par \noindent Förändringen i med realränta: 
+$$
+\Delta d_{t+1} = \frac{G_t-T_t}{Y_t} + (r-g)\frac{D_t}{Y_t}
+$$
+Detta ger en formel som ser ut på följande vis. Denna formel är förändringen i skuld av BNP. 
+$$
+\Delta \frac{D}{Y} = \frac{G-T}{Y} + (r-g)\frac{D}{Y}
+$$
+Här ser vi då tydligt att, tillväxt reducerar skuldkvoten likaså gör en hög skatt eller ett lågt spenderade av staten. För att skuldration skall vara stabil måste villkoret nedan hålla.
+$$
+\Delta \frac{D}{Y} = 0
+$$
+Formeln för statens skuldtillväxt kan också skrivas i nominella termer. Se nedan.
+$$
+\Delta \frac{D}{Y} \approx \frac{G-T-iD}{Y} - (\pi + g)\frac{D}{Y} 
+$$
+
+
+\includegraphics[scale=0.5]{skarm12}
+\vspace{5mm} \par \noindent 
+I bilden ovan ser vi vilka länder som har ett positivt primärt budgetunderskott och hur deras realränta är jämfört med tillväxtakten i landet. 
+
+\vspace{5mm} \par \noindent 
+
+Hushållens (reala) disponibla inkomst: $ Y^d = Y-T+rD $.  \par \noindent
+Konsumptionsfunktionen inkluderat skatt: $  C_t = C(Y^t,Y^e-T^e,i-\pi^e, A) $. Där $ T^e $ är förväntad framtida skatt.
+
+IS-LM inkluderat statlig konsumption: 
+$$
+Y = C(Y^t,Y^e-T^e,i-\pi^e, A) + I(i-\pi^e, Y^e,K) + G 
+$$
+LM ser likadan ut som tidigare. 
+\vspace{5mm} \par \noindent 
+En ökning av offentliga utgifter får ett större utslag på BNP än en reduktion av skatter. Reduceras skatterna så spenderar folket endast en andel av den ökade inkomsten. Den Rikardianska ekvivalensen säger att det spelar ingen roll hur en stat finansierar sina utgifter, antingen via ökade skatter eller lån. Befolkningen kommer annpassa sig till den förväntade framtiden. 
+
+\vspace{5mm} \par \noindent 
+
+Den nominella skuldration och reala skuldration kan sättas lika med varandra. 
+\section{Den öppna ekonomin}
+\vspace{5mm} \par \noindent 
+\title{Föreläsning 18}
+\vspace{5mm} \par \noindent 
+
+\textbf{Nominell växelkurs: e}
+\begin{itemize}
+     \item Pris på inhemsk valuta i termer av utländsk valuta. 
+     \item EUR/SEK
+\end{itemize}
+\vspace{5mm} \par \noindent 
+\textbf{Real växelkurs: $ \varepsilon $}
+\begin{itemize}
+     \item Pris för inhemskt producerad vara i termer av utländsk producerad vara. 
+\end{itemize}
+
+Den reala växelkursens formel ses nedan: 
+$$
+\varepsilon = e * \frac{P}{P^*}
+$$
+Vi har nu tre olika ekvationer för aggregerad efterfrågan; AD. 
+\begin{enumerate}
+ \item Ekonomi utan stat, sluten. $ AD  = C + I $
+ \item Ekonomi med stat, sluten. $ AD = C + I + G $
+ \item Ekonomi med stat, öppen. $ AD = C + I + G + NX $ 
+\end{enumerate}
+
+Vad händer med nettoexporten om reala växelkursen stiger ? \vspace{5mm} \par \noindent  \textbf{1. }Den exporterade volymen sjunker som en faktor av att våra varor blir dyrare i utlandet. \textbf{2. }Vår krona stärks och vi kan köpa in mer av utlandet än innan. \textbf{3.}Det i sig medför att vår import ökar. \textbf{4. } Vi kan då anta att NX faller. $ \frac{dNX}{d \varepsilon} < 0 $. 
+
+\vspace{5mm} \par \noindent 
+
+IS i en öppen ekonomi påverkas av NX också. Det vill säga IS-kurvan kan skifta pågrund av fler faktorer. Tillexempel så ger en ändring av reala växelkursen ett skifte av IS. 
+
+\textbf{Räteparitetsvillkoret}
+
+\begin{itemize}
+     \item NX beror på växelkursen.
+     \item C och I beror på räntan. Konsumtion och investeringar sjunker med en ökad ränta. 
+\end{itemize}
+
+Räteparitet är sambandet mellan växelkurs och ränta. Ses nedan. 
+$$
+1+ i^*_t = (1+i_t) \frac{e_{t+1}^e}{e_t}
+$$
+Om landet i fråga använder sig av en fast och fullständigt trovärdig växelkurs medför detta följande: 
+$$
+e_{t+1}^e = e_t = e^\otimes
+$$
+$$
+\Rightarrow i^*_t = i_t 
+$$
+Den nominella räntan i Sverige måste vara densamma som omvärlden. \vspace{5mm} \par \noindent Vid en flytande växelkurs så kommer dagens växelkurs anpassa sig till vad marknaden vill. Det ger oss följande formel. 
+$$
+1+ i^*_t = (1+i_t) \frac{e_{t+1}^e}{e_t}
+$$
+$$
+\Rightarrow e_t = \frac{1+i_t}{1+i_t^*} e_{t+1}^e
+$$
+Approximation av ränteparitetsvillkoret: 
+$$
+i_t - i^*_t \approx - \frac{\Delta e^e_{t+1}}{e_t}
+$$
+Växelkursen här bestäms av framtida förväntad växelkurs, inhemsk nominell ränta och utländsk nominell ränta. Ränteskillnader kompenserar för den förväntade depricering/appriceringen av valutan. Om en förväntad depricering förutspås med 5 \% måste vår ränta vara 5 \% högre. \vspace{5mm} \par \noindent Om inverterare anser att sannolikheten för devalvering inte är 100 \% då så kommer räntan beror på hur troligt investerare anser att en devalvering kommer att ske. Det medför att räntan kommer att anpassas där efter. 
+
+\vspace{5mm} \par \noindent
+
+\textbf{Appendix}
+\vspace{5mm} \par \noindent
+Bytesbalansen = nationens finansiella sparande
+\vspace{5mm} \par \noindent
+
+Netto av bytesbalansen finansieras genom lån/till från andra länder genom köp/försäljning av tillgångar. 
+
+$$
+Bytesbalansen = fin.saprande = ökande/minskande \ nettofodringar = \Delta F 
+$$
+Med antagandet: $ Y^F + Tr^F = rF +0$ får vi följande formel. 
+$$
+\Rightarrow \Delta F = NX + rF 
+$$
+Sätter vi samman denna formel med DBNI så får vi formeln nedan. 
+$$
+\Delta F = Y + rF - C - G-I 
+$$
+Hur  bytesbalansen påverkas av inkomsten kan vi inte säga då $ Y $ bestäms endogent. 
+
+\vspace{5mm} \par \noindent 
+\title{Föreläsning 19}
+\vspace{5mm} \par \noindent 
+
+\textbf{Öppen ekonomi på långsikt}
+
+\vspace{5mm} \par \noindent 
+I den öppna ekonomin på lång sikt så är vi intresserade av att förstå vilka faktorer som bestämmer
+\begin{itemize}
+     \item Realränta
+     \item Bytesbalansen
+     \item Reala växelkursen
+     \item Kapitalstocken och produktion
+\end{itemize}
+
+I en långsiktig jämvikt med konstant real växelkurs så ser formeln ut som nedan: 
+$$
+\frac{\Delta e}{e} = \pi^* - \pi
+$$
+Om ett litet öppet land har en högre inflation än omvärlden måste valutan falla för att konkurrenskraften ska bibehållas. Detta kan fås utifrån förändringen av nominella räntan. Använd förenkling från föreläsning 1.  Realräntan måste vara samma i det lilla landet som omvärlden. 
+
+\vspace{5mm} \par \noindent 
+
+\textbf{Kapitalstocken och produktion}
+\vspace{5mm} \par \noindent 
+
+Ett land bör investera så länge som nettomarginalavkastningen på kapital är högre än avkastningskravet på världsmarknaden. Om hushållens sparande inte räcker till så är det optimalt att låna in resten från utlandet. Det ger oss: 
+$$
+Y^n = F(K,EN^n) = f(k^*)EN^n
+$$
+Sparande och investeringar är inte nära relaterade med varandra. Länder kan ha stora investeringar genom lånat kapital från omvärlden. 
+
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.5]{skarm13}
+    \caption{Figur över sparande och investeringar. Hade de varit nära relaterade hade vi set en 45 gradig linje}
+    \label{fig:1 }
+\end{figure}
+
+I bilden nedan ser vi den reala växelkursen som ger en naturlig BNP. $ AD = Y^n$. 
+
+
+ \includegraphics[scale=0.7]{skarm14}
+ 
+Vid ökad pessimism om framtiden så leder det till en minskad investeringsvilja. Minskad investeringsvilja leder till en minskad inhemsk efterfrågan. Detta medför att konsumtion och investeringar minskar där med förskjuter C + I + G neråt. Detta medför en ökning av NX. 
+
+\vspace{5mm} \par \noindent 
+
+\textbf{Utlandsskuld på långsikt}
+\vspace{5mm} \par \noindent 
+
+Vad händer när konsumenter blir mer otåliga? De är trötta på att spara och vill istället leva loppan. De ökar därmed sin konsumtion. I detta fall då statsbdgeten är i balans och ingentillväxt existerar så kan konsumtionen endast öka om de använder mer än sin inkomst. Kapitaltillskottet måste då komma från omvärlden. Det vill säga bytesblansen blir negativ: $ \Delta < 0 $. 
+
+Illustration nedan.
 
 
 
