--- a/main.tex
+++ b/main.tex
@@ -642,13 +642,66 @@ I bilden nedan ser vi den reala växelkursen som ger en naturlig BNP. $ AD = Y^n
 Vid ökad pessimism om framtiden så leder det till en minskad investeringsvilja. Minskad investeringsvilja leder till en minskad inhemsk efterfrågan. Detta medför att konsumtion och investeringar minskar där med förskjuter C + I + G neråt. Detta medför en ökning av NX. 
 
 \vspace{5mm} \par \noindent 
-
 \textbf{Utlandsskuld på långsikt}
 \vspace{5mm} \par \noindent 
 
 Vad händer när konsumenter blir mer otåliga? De är trötta på att spara och vill istället leva loppan. De ökar därmed sin konsumtion. I detta fall då statsbdgeten är i balans och ingentillväxt existerar så kan konsumtionen endast öka om de använder mer än sin inkomst. Kapitaltillskottet måste då komma från omvärlden. Det vill säga bytesblansen blir negativ: $ \Delta < 0 $. 
 
 Illustration nedan.
+
+\includegraphics[scale=0.6]{skarm15}
+
+\vspace{5mm} \par \noindent 
+
+Otåliga konsumenter vill konsumera mer idag än imorgon (nästa period) detta kan ses genom den subjektiva diskonteringsräntan. Konsumtionen ökar fört men sedan måste den falla. Detta för att kunna betala räntor på den ökade konsumtionen i period ett. Risk i ett land är viktigt att ta med i bejaka då det kan i högsta grad påverka incitamenten att spara. Där med också medföra en negativ bytesbalans. 
+
+
+\vspace{5mm} \par \noindent 
+\title{Föreläsning 20}
+\vspace{5mm} \par \noindent 
+\textbf{Den öppna ekonomin på kortsikt}
+\vspace{5mm} \par \noindent 
+Poängen med detta kapitel är att finnanspolitik och penningpolitik har olika påverkan om vi har fast eller flytande växelkurs. I detta kapitel antar vi att CB sätter räntan och kan därmed strunta i LM-sambandet. 
+\vspace{5mm} \par \noindent 
+
+Modellen för en öppen ekonomi inkluderar IS-LM samt också ränteparitetsvillkoret. 
+\vspace{5mm} \par \noindent 
+Vid köp av utländska värdepapper så ökar detta det relativa utbudet för SEK $ \Rightarrow $ den nominella växelkursen går ner. Detta i linje med vår intuition ökat utbud $ \Rightarrow $ minskade efterfrågan $ \Rightarrow $ minsakt pris, det vill säga ränta. Detta fungerar dock inte vid fast växelkurs. På grund av arbitrage. 
+
+
+\begin{itemize}
+     \item $ \tau $ är marginalsaktten.
+     \item $ c_1 $ är den mrginella konsumtionsbenägenheten. 
+     \item $ q $ är den marginella importbenägenheten
+\end{itemize}
+
+Vid en devalvering av valutan så skiftar först IP uppåt. Devalveringen medför att den inhemska valutan blir billigare för omvärlden och där med ökar $ NX $ och $ AD $. Detta medför att IS skiftar utåt. Vid ett skifte av IS så ökar också $ \pi $ till ovanför $ \pi^*$. Detta för att $ Y_1 > Y^n$. 
+
+\vspace{5mm} \par \noindent 
+
+När inflationen har stigit så ökar även den reala växelkursen; konkurrensens urholkas därmed. Följden blir att $ NX \downarrow \ \Rightarrow \ IS $ skiftar tillbaka. Produktionen åter går därmed så småning om till den naturliga nivån. En devalvering kan återställa balansen i ekonomin om ett land har haft hög inflation och låg produktion under en tid. 
+
+\vspace{5mm} \par \noindent 
+\textbf{Flytande växelkurs}
+\vspace{5mm} \par \noindent 
+
+En högre ränta har flera direkta effekter. Den har en negativ påverkan på C och I. Minskar också nettoexporten via växelkurskanalen. Appreciering av valutan, vilket ger en lägre nettoexport. $ IS^*$ är där med flackare än $ IS$. 
+
+\vspace{5mm} \par \noindent 
+
+På greund av att $ IS^* $ är flackare så har en räntesänkning större effekt än vid fast växelkurs. Sker en efterfrågechoeck så att CB måste höja räntan i hemlandet för att hålla $ Y^* = Y^{*n} $ så skiftar $ IS $ ut och $ e \downarrow $. Detta får följdeffekter. 
+
+
+\begin{table}[]
+\centering
+\caption{Tabell över i vilket läge staten bör bedriva respketive politik.}
+\label{my-label}
+\begin{tabular}{lll}
+       & \textbf{Fast växelkurs} & \textbf{Flytande växelkurs} \\
+\textbf{Bra}    & Finanspolitik  & Penningpolitik     \\
+\textbf{Dåligt} & Penningpolitik & Finanspolitik     
+\end{tabular}
+\end{table}
 
 
 
