--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 \usepackage[utf8]{inputenc}
 
 \title{GU-Makro-Formler}
-\author{orts }
+\author{Samuel Ört}
 \date{April 2016}
 
 \usepackage{natbib}
@@ -20,13 +20,13 @@ Formler för makroteori. Går igenom och förklarar alla relevanta formler.
 \section{Conclusion}
 ``I always thought something was fundamentally wrong with the universe'' \citep{adams1995hitchhiker}
 
-\section{Långa sikten F2-F11}
+\section{Långa sikten}
 \title{Föreläsning 1}
 
 Under krisen 2008 så sjönk BNP per capita kraftigt. Idag har den återhämtat sig så att den är på samma nivå som 2007. 
 
 $$
-    \Delta \ ln \ Z = \Delta \ln  X + \Delta \ ln Y - \Delta \ ln Q
+    \Delta \ln \ Z = \Delta \ln  X + \Delta \ln Y - \Delta \ln Q
 $$
 Förenkling vid förändring. Gäller vid följande. 
 $$
@@ -82,7 +82,7 @@ Tillväxttakt är $g_{t+1}$
 
 Sveriges tillväxt startade i mitten på 1800-talet. 
 
-\textbf{Kort sikt < 2år}: Löner och priser är fasta. 
+\textbf{Kort sikt $< $2år}: Löner och priser är fasta. 
 
 \textbf{Lång sikt 4-5år}: Löner och priser anpassar sig till jämviktsvärden. 
 
@@ -131,7 +131,7 @@ Priselasticitet: $$\frac{P_i*dY_i}{dP_i*Y_i}$$
 
 Det genomsnittliga priset: 
 $$
-P = (1-\mu)MC = (1-\mu)\frac{W}{MPL}
+P = (1+\mu)MC = (1+\mu)\frac{W}{MPL}
 $$
 
 \textbf{Sluten ekonomi: Inkomst = produktion}
